loading and saving of local games
Several features added (should've been separate commits):

	A main menu page
	game list page with new game
	load/save games to sqlite database

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -10,6 +10,7 @@ android:versionName="1.0">
 				<category android:name="android.intent.category.LAUNCHER" />
 			</intent-filter>
 		</activity>
+		<activity android:name="GameListActivity" />
 		<activity android:name="GameActivity" />
 	</application>
 </manifest> 
