--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -4,13 +4,13 @@ package="com.chess.genesis"
 android:versionCode="1"
 android:versionName="1.0">
 	<application android:label="@string/app_name" android:icon="@drawable/icon">
-		<activity android:name="MainMenuActivity" android:label="@string/app_name">
+		<activity android:name="MainMenu" android:label="@string/app_name">
 			<intent-filter>
 				<action android:name="android.intent.action.MAIN" />
 				<category android:name="android.intent.category.LAUNCHER" />
 			</intent-filter>
 		</activity>
-		<activity android:name="GameListActivity" />
-		<activity android:name="GameActivity" />
+		<activity android:name="GameList" />
+		<activity android:name="Game" />
 	</application>
 </manifest> 
