--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,10 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
+<manifest
+xmlns:android="http://schemas.android.com/apk/res/android"
 package="com.chess.genesis"
 android:versionCode="1"
 android:versionName="1.0">
-	<application android:label="@string/app_name" android:icon="@drawable/icon">
-		<activity android:name="MainMenu" android:label="@string/app_name">
+	<application
+	android:label="@string/app_name"
+	android:icon="@drawable/icon">
+		<activity
+		android:name="MainMenu"
+		android:label="@string/app_name">
 			<intent-filter>
 				<action android:name="android.intent.action.MAIN" />
 				<category android:name="android.intent.category.LAUNCHER" />
@@ -12,5 +17,7 @@ android:versionName="1.0">
 		</activity>
 		<activity android:name="GameList" />
 		<activity android:name="Game" />
+		<activity android:name="Register" />
 	</application>
+	<uses-permission android:name="android.permission.INTERNET"></uses-permission>
 </manifest> 
