--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -20,4 +20,5 @@ android:versionName="1.0">
 		<activity android:name="Register" />
 	</application>
 	<uses-permission android:name="android.permission.INTERNET"></uses-permission>
+	<uses-sdk android:minSdkVersion="7" />
 </manifest> 
