--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -4,21 +4,22 @@ xmlns:android="http://schemas.android.com/apk/res/android"
 package="com.chess.genesis"
 android:versionCode="1"
 android:versionName="1.0">
+	<uses-sdk android:minSdkVersion="7"/>
 	<application
 	android:label="@string/app_name"
-	android:icon="@drawable/icon">
+	android:icon="@drawable/icon"
+	android:theme="@style/DefaultTheme">
 		<activity
 		android:name="MainMenu"
 		android:label="@string/app_name">
 			<intent-filter>
-				<action android:name="android.intent.action.MAIN" />
-				<category android:name="android.intent.category.LAUNCHER" />
+				<action android:name="android.intent.action.MAIN"/>
+				<category android:name="android.intent.category.LAUNCHER"/>
 			</intent-filter>
 		</activity>
-		<activity android:name="GameList" />
-		<activity android:name="Game" />
-		<activity android:name="Register" />
+		<activity android:name="GameList"/>
+		<activity android:name="Game"/>
+		<activity android:name="Register"/>
 	</application>
 	<uses-permission android:name="android.permission.INTERNET"></uses-permission>
-	<uses-sdk android:minSdkVersion="7" />
 </manifest> 
