add login activity with game syncing
instead of a register activity, there's now a login activity that
has a button to register. When logging in, the list of games are
fetched from the server and matched to what is already in the database.

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -19,6 +19,7 @@ android:versionName="1.0">
 		</activity>
 		<activity android:name="GameList"/>
 		<activity android:name="Game"/>
+		<activity android:name="Login"/>
 		<activity android:name="Register"/>
 	</application>
 	<uses-permission android:name="android.permission.INTERNET"></uses-permission>
