--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -21,6 +21,7 @@ android:versionName="1.0">
 		<activity android:name="Game"/>
 		<activity android:name="Login"/>
 		<activity android:name="Register"/>
+		<activity android:name="SubmitMove" android:theme="@style/NoDimDialog"/>
 	</application>
 	<uses-permission android:name="android.permission.INTERNET"></uses-permission>
 </manifest> 
