--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -2,8 +2,8 @@
 <manifest
 xmlns:android="http://schemas.android.com/apk/res/android"
 package="com.chess.genesis"
-android:versionCode="1"
-android:versionName="1.0">
+android:versionCode="3"
+android:versionName="1.0.2 Beta">
 	<uses-sdk android:minSdkVersion="7"/>
 	<application
 	android:label="@string/app_name"
