add notification service and settings activity
GenesisNotifier is a service that checks for new games, msgs or
games which you need to move. It works with GenesisAlarm which
recieves alarm timeouts and starts GenesisNotifier. Henceforth,
the service is only on for short intervals. The simplified algorithm is:

	if not loggedin or service disabled
		quit
	if started from GenesisAlarm
		check server for updates
		send notifications if any
	schedule next wakup using GenesisAlarm
	quit

The Settings activity currently allows for enable/disabling
the polling notifications and the polling frequency.

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -17,11 +17,14 @@ android:versionName="@string/version">
 				<category android:name="android.intent.category.LAUNCHER"/>
 			</intent-filter>
 		</activity>
-		<activity android:name="GameList"/>
+		<activity android:name="GameList" android:launchMode="singleTask"/>
 		<activity android:name="Game"/>
 		<activity android:name="Login"/>
 		<activity android:name="Register"/>
+		<activity android:name="Settings"/>
 		<activity android:name="SubmitMove" android:theme="@style/NoDimDialog"/>
+		<service android:name="GenesisNotifier" android:enabled="true"/>
+		<receiver android:name="GenesisAlarm"></receiver>
 	</application>
 	<uses-permission android:name="android.permission.INTERNET"></uses-permission>
 </manifest> 
