copy Game and GameState to [Gen|Reg]Game and [Gen|Reg]GameState
Since Game and GameState handle the UI, there needs to be a specialized
version for each game type. Also since the BoardLayout and PlaceLayout
call GameState, add a base GameState class which the Gen/Reg classes
inherit from. This prevents having to have more specialized classes.

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -18,7 +18,8 @@ android:versionName="@string/version">
 			</intent-filter>
 		</activity>
 		<activity android:name="GameList" android:launchMode="singleTask"/>
-		<activity android:name="Game"/>
+		<activity android:name="RegGame"/>
+		<activity android:name="GenGame"/>
 		<activity android:name="Login"/>
 		<activity android:name="Register"/>
 		<activity android:name="Settings"/>
