add MsgBox activity for ingame chat
Ingame chat is currently accessed by the game options menu.
MsgListAdapter is the BaseAdapter for displaying game messages.
GameListAdapter has added a "new msg" field to the list.

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -23,6 +23,7 @@ android:versionName="@string/version">
 		<activity android:name="Login"/>
 		<activity android:name="Register"/>
 		<activity android:name="Settings"/>
+		<activity android:name="MsgBox"/>
 		<activity android:name="SubmitMove" android:theme="@style/NoDimDialog"/>
 		<service android:name="GenesisNotifier" android:enabled="true"/>
 		<receiver android:name="GenesisAlarm"></receiver>
