check device for an active internet connection in GenesisNotifier
If there is no internet connection available, then there's no
need to check the server. This removes the "can't connect to server"
error notification if the device doesn't have connection.

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -30,4 +30,5 @@ android:versionName="@string/version">
 		<receiver android:name="GenesisAlarm"></receiver>
 	</application>
 	<uses-permission android:name="android.permission.INTERNET"></uses-permission>
+	<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"></uses-permission>
 </manifest> 
