--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -18,14 +18,15 @@ android:versionName="@string/version">
 				<category android:name="android.intent.category.LAUNCHER"/>
 			</intent-filter>
 		</activity>
-		<activity android:name="GameList" android:launchMode="singleTask"/>
+		<activity android:name="GameList" android:windowSoftInputMode="adjustPan" android:launchMode="singleTask"/>
+		<activity android:name="MsgBox" android:windowSoftInputMode="adjustPan"/>
+		<activity android:name="Login" android:windowSoftInputMode="adjustPan"/>
+		<activity android:name="Register" android:windowSoftInputMode="adjustPan"/>
+		<activity android:name="SubmitMove" android:theme="@style/NoDimDialog"/>
+		<activity android:name="Settings"/>
 		<activity android:name="RegGame"/>
 		<activity android:name="GenGame"/>
-		<activity android:name="Login"/>
-		<activity android:name="Register"/>
-		<activity android:name="Settings"/>
-		<activity android:name="MsgBox"/>
-		<activity android:name="SubmitMove" android:theme="@style/NoDimDialog"/>
+
 		<service android:name="GenesisNotifier" android:enabled="true"/>
 		<receiver android:name="GenesisAlarm"></receiver>
 	</application>
