revert MsgBox.java to the default android:windowSoftInputMode="adjustResize"
Until a full solution can be found for the virtual keyboard shrinking
the window and limiting the listview size because of the bottom bar.
Revert back to resize window on virtual keyboard change.

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -19,7 +19,7 @@ android:versionName="@string/version">
 			</intent-filter>
 		</activity>
 		<activity android:name="GameList" android:windowSoftInputMode="adjustPan" android:launchMode="singleTask"/>
-		<activity android:name="MsgBox" android:windowSoftInputMode="adjustPan"/>
+		<activity android:name="MsgBox"/>
 		<activity android:name="Login" android:windowSoftInputMode="adjustPan"/>
 		<activity android:name="Register" android:windowSoftInputMode="adjustPan"/>
 		<activity android:name="SubmitMove" android:theme="@style/NoDimDialog"/>
