--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -42,5 +42,6 @@ android:versionName="@string/version">
 	</application>
 	<uses-permission android:name="android.permission.INTERNET"/>
 	<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
+	<uses-permission android:name="android.permission.VIBRATE"/>
 	<uses-permission android:name="android.permission.WAKE_LOCK"/>
 </manifest> 
