--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -19,14 +19,14 @@ android:versionName="@string/version">
 			</intent-filter>
 		</activity>
 		<activity android:name="GameList" android:windowSoftInputMode="adjustPan" android:launchMode="singleTask"/>
-		<activity android:name="OnlineGameList" />
-		<activity android:name="MsgBox"/>
-		<activity android:name="Login" android:windowSoftInputMode="adjustPan"/>
-		<activity android:name="Register" android:windowSoftInputMode="adjustPan"/>
+		<activity android:name="OnlineGameList" android:windowSoftInputMode="adjustPan" android:launchMode="singleTask"/>
+		<activity android:name="Login" android:windowSoftInputMode="adjustPan" android:launchMode="singleTask"/>
+		<activity android:name="Register" android:windowSoftInputMode="adjustPan" android:launchMode="singleTask"/>
 		<activity android:name="SubmitMove" android:theme="@style/NoDimDialog"/>
 		<activity android:name="Settings"/>
 		<activity android:name="RegGame"/>
 		<activity android:name="GenGame"/>
+		<activity android:name="MsgBox"/>
 
 		<service android:name="GenesisNotifier" android:enabled="true"/>
 		<receiver android:name="GenesisAlarm">
