add UserStats activity that replaces Archived Games
The UserStats activity shows the stats from the userstats server
request. From the main menu, the activity loads the current user's
stats. The activity is also loaded by clicking the username in the
Game activity.

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -28,6 +28,7 @@ android:versionName="@string/version">
 		<activity android:name="Register" android:windowSoftInputMode="adjustPan" android:launchMode="singleTask"/>
 		<activity android:name="SubmitMove" android:theme="@style/NoDimDialog"/>
 		<activity android:name="Settings" android:launchMode="singleTask"/>
+		<activity android:name="UserStats"/>
 		<activity android:name="RegGame"/>
 		<activity android:name="GenGame"/>
 		<activity android:name="MsgBox"/>
