--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -23,7 +23,7 @@ android:versionName="@string/version">
 			</intent-filter>
 		</activity>
 		<activity android:name="GameList" android:windowSoftInputMode="adjustPan" android:launchMode="singleTask"/>
-		<activity android:name="OnlineGameList" android:windowSoftInputMode="adjustPan" android:launchMode="singleTask"/>
+		<activity android:name="OnlineGameList" android:configChanges="orientation" android:windowSoftInputMode="adjustPan" android:launchMode="singleTask"/>
 		<activity android:name="Login" android:windowSoftInputMode="adjustPan" android:launchMode="singleTask"/>
 		<activity android:name="Register" android:windowSoftInputMode="adjustPan" android:launchMode="singleTask"/>
 		<activity android:name="SubmitMove" android:theme="@style/NoDimDialog"/>
