--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -4,7 +4,7 @@ xmlns:android="http://schemas.android.com/apk/res/android"
 package="com.chess.genesis"
 android:versionCode="38"
 android:versionName="@string/version">
-	<uses-sdk android:targetSdkVersion="14" android:minSdkVersion="7"/>
+	<uses-sdk android:minSdkVersion="7"/>
 	<supports-screens android:smallScreens="false"/>
 	<uses-permission android:name="android.permission.INTERNET"/>
 	<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
