--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -22,9 +22,9 @@ android:versionName="@string/version">
 				<category android:name="android.intent.category.LAUNCHER"/>
 			</intent-filter>
 		</activity>
-		<activity android:name="OnlineGameList" android:configChanges="orientation" android:launchMode="singleTask"/>
+		<activity android:name="GameListOnline" android:configChanges="orientation" android:launchMode="singleTask"/>
 		<activity android:name="Settings" android:configChanges="orientation" android:launchMode="singleTask"/>
-		<activity android:name="GameList" android:launchMode="singleTask"/>
+		<activity android:name="GameListLocal" android:launchMode="singleTask"/>
 		<activity android:name="Login" android:launchMode="singleTask"/>
 		<activity android:name="Register" android:launchMode="singleTask"/>
 		<activity android:name="UserStats" android:configChanges="orientation"/>
