--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -32,7 +32,7 @@ android:versionName="@string/version">
 		<activity android:name="GenGame" android:configChanges="orientation"/>
 		<activity android:name="MsgBox" android:configChanges="orientation" android:windowSoftInputMode="adjustPan"/>
 		<activity android:name="SubmitMove" android:theme="@style/NoDimDialog"/>
-
+		<activity android:name="com.google.ads.AdActivity" android:configChanges="keyboard|keyboardHidden|orientation|screenLayout|uiMode|screenSize|smallestScreenSize"/>
 		<service android:name="GenesisNotifier" android:enabled="true"/>
 		<receiver android:name="GenesisAlarm">
 			<intent-filter>
