--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -16,21 +16,22 @@ android:versionName="@string/version">
 	android:icon="@drawable/icon"
 	android:theme="@style/DefaultTheme">
 		<activity
-		android:name="MainMenu"
+		android:name="StartActivity"
 		android:label="@string/app_name">
 			<intent-filter>
 				<action android:name="android.intent.action.MAIN"/>
 				<category android:name="android.intent.category.LAUNCHER"/>
 			</intent-filter>
 		</activity>
+		<activity android:name="MainMenuPhone" android:windowSoftInputMode="adjustPan"/>
+		<activity android:name="MainMenuTablet" android:windowSoftInputMode="adjustPan"/>
 		<activity android:name="GameListOnline" android:configChanges="orientation" android:launchMode="singleTask" android:windowSoftInputMode="adjustPan"/>
 		<activity android:name="Settings" android:configChanges="orientation" android:launchMode="singleTask"/>
-		<activity android:name="GameListLocal" android:launchMode="singleTask"/>
+		<activity android:name="GameListLocal" android:launchMode="singleTask" android:windowSoftInputMode="adjustPan"/>
 		<activity android:name="Login" android:windowSoftInputMode="adjustPan"/>
 		<activity android:name="Register" android:windowSoftInputMode="adjustPan"/>
 		<activity android:name="UserStats" android:configChanges="orientation"/>
-		<activity android:name="RegGame" android:configChanges="orientation"/>
-		<activity android:name="GenGame" android:configChanges="orientation"/>
+		<activity android:name="Game" android:configChanges="orientation"/>
 		<activity android:name="MsgBox" android:configChanges="orientation" android:windowSoftInputMode="adjustPan"/>
 		<activity android:name="SubmitMove" android:theme="@style/NoDimDialog"/>
 		<activity android:name="com.google.ads.AdActivity" android:configChanges="keyboard|keyboardHidden|orientation|screenLayout|uiMode|screenSize|smallestScreenSize"/>
