update build tool and sdk versions

--- a/build.gradle
+++ b/build.gradle
@@ -1,12 +1,12 @@
 task wrapper(type: Wrapper) {
-    gradleVersion = '2.7'
+    gradleVersion = '4.2.1'
 }
 buildscript {
     repositories {
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:+'
+        classpath 'com.android.tools.build:gradle:2.3.3'
     }
 }
 
