--- a/build.gradle
+++ b/build.gradle
@@ -1,17 +1,25 @@
-task wrapper(type: Wrapper) {
-    gradleVersion = '4.2.1'
-}
+
 buildscript {
     repositories {
+        google()
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:2.3.3'
+        classpath 'com.android.tools.build:gradle:3.0.1'
     }
 }
 
 allprojects {
     repositories {
+        google()
         jcenter()
     }
+}
+
+task wrapper(type: Wrapper) {
+    gradleVersion = '4.5.1'
+}
+
+task clean(type: Delete) {
+    delete rootProject.buildDir
 }
