--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,8 @@ package="com.chess.genesis">
 	android:label="@string/app_name"
 	android:icon="@drawable/icon"
 	android:theme="@style/DefaultTheme"
-	android:allowBackup="true">
+	android:allowBackup="true"
+	android:fullBackupContent="@xml/backup_descriptor">
 		<activity
 		android:name="com.chess.genesis.activity.StartActivity"
 		android:label="@string/app_name">
