don't use '+' version for support-v4 lib

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,6 +28,6 @@ android {
 }
 
 dependencies {
-    compile 'com.android.support:support-v4:+'
+    compile 'com.android.support:support-v4:27.1.0'
     compile 'com.google.android.gms:play-services-ads:+'
 }
