--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,5 +29,6 @@ android {
 
 dependencies {
     compile 'com.android.support:support-v4:27.1.0'
+    compile 'com.android.support:appcompat-v7:27.1.0'
     compile 'com.google.android.gms:play-services-ads:+'
 }
