--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,10 +30,10 @@ android {
 def supportVer = '27.1.0'
 
 dependencies {
-    compile "com.android.support:appcompat-v7:${supportVer}"
-    compile "com.android.support:support-compat:${supportVer}"
-    compile "com.android.support:support-core-ui:${supportVer}"
-    compile "com.android.support:support-core-utils:${supportVer}"
-    compile "com.android.support:support-fragment:${supportVer}"
-    compile "com.google.android.gms:play-services-ads-lite:12.0.0"
+    implementation "com.android.support:appcompat-v7:${supportVer}"
+    implementation "com.android.support:support-compat:${supportVer}"
+    implementation "com.android.support:support-core-ui:${supportVer}"
+    implementation "com.android.support:support-core-utils:${supportVer}"
+    implementation "com.android.support:support-fragment:${supportVer}"
+    implementation "com.google.android.gms:play-services-ads-lite:12.0.0"
 }
