--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,19 +2,17 @@ apply plugin: 'com.android.application'
 apply from: 'signing.gradle'
 
 android {
-    compileSdkVersion 27
-    buildToolsVersion '27.0.3'
+    compileSdkVersion 28
 
     applicationVariants.all { variant ->
         variant.outputs.each { output ->
-            String name = output.outputFile.name.replace(".apk", "-v${variant.versionName}.apk")
-            output.outputFileName = name.replace("app", "GenesisChess")
+            output.outputFileName = "GenesisChess-${output.baseName}-v${variant.versionName}.apk"
         }
     }
     defaultConfig {
         applicationId "com.chess.genesis"
         minSdkVersion 19
-        targetSdkVersion 27
+        targetSdkVersion 28
         versionCode 70
         versionName "1.14.10"
     }
@@ -27,7 +25,7 @@ android {
     }
 }
 
-def supportVer = '27.1.0'
+def supportVer = '28.0.0'
 
 dependencies {
     implementation "com.android.support:appcompat-v7:${supportVer}"
@@ -35,5 +33,5 @@ dependencies {
     implementation "com.android.support:support-core-ui:${supportVer}"
     implementation "com.android.support:support-core-utils:${supportVer}"
     implementation "com.android.support:support-fragment:${supportVer}"
-    implementation "com.google.android.gms:play-services-ads-lite:12.0.0"
+    implementation "com.google.android.gms:play-services-ads-lite:17.2.1"
 }
