--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,12 +29,7 @@ android {
     }
 }
 
-def supportVer = '28.0.0'
-
 dependencies {
-    implementation "com.android.support:appcompat-v7:${supportVer}"
-    implementation "com.android.support:support-compat:${supportVer}"
-    implementation "com.android.support:support-core-ui:${supportVer}"
-    implementation "com.android.support:support-core-utils:${supportVer}"
-    implementation "com.android.support:support-fragment:${supportVer}"
+    implementation 'androidx.appcompat:appcompat:1.0.2'
+    implementation 'androidx.preference:preference:1.0.0'
 }
