--- a/app/build.gradle
+++ b/app/build.gradle
@@ -73,8 +73,10 @@ dependencies {
     implementation 'androidx.room:room-runtime:2.4.2'
     implementation 'androidx.activity:activity-compose:1.4.0'
     implementation 'androidx.compose.material3:material3:1.0.0-alpha10'
-    implementation 'com.google.android.material:material:1.5.0'
+    implementation 'com.google.android.material:material:1.6.0'
     implementation 'androidx.activity:activity-compose:1.4.0'
+    implementation 'androidx.navigation:navigation-compose:2.4.2'
+    implementation 'androidx.fragment:fragment:1.4.1'
 
     annotationProcessor 'androidx.room:room-compiler:2.4.2'
 
