--- a/app/build.gradle
+++ b/app/build.gradle
@@ -81,7 +81,9 @@ dependencies {
     implementation 'androidx.paging:paging-compose:1.0.0-alpha15'
     implementation 'androidx.paging:paging-runtime-ktx:3.1.1'
     implementation 'androidx.preference:preference:1.2.0'
+    implementation 'org.eclipse.paho:org.eclipse.paho.client.mqttv3:1.2.5'
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.1'
+    implementation 'org.msgpack:msgpack-core:0.9.1'
 
     annotationProcessor 'androidx.room:room-compiler:2.4.2'
 
