--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,10 +3,12 @@
 xmlns:android="http://schemas.android.com/apk/res/android">
 	<supports-screens android:smallScreens="false"/>
 	<uses-permission android:name="android.permission.INTERNET"/>
+	<uses-feature android:name="android.hardware.screen.portrait"/>
 	<application
 	android:label="@string/app_name"
 	android:icon="@drawable/icon"
 	android:theme="@style/Theme.AppCompat.DayNight"
+	android:screenOrientation="portrait"
 	android:allowBackup="true">
 		<activity
 		android:name="com.chess.genesis.activity.MainActivity"
