--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,7 @@
 <manifest
 xmlns:android="http://schemas.android.com/apk/res/android">
 	<supports-screens android:smallScreens="false"/>
+	<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
 	<uses-permission android:name="android.permission.INTERNET"/>
 	<uses-feature android:name="android.hardware.screen.portrait"/>
 	<application
