--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id 'com.android.application'
     id 'kotlin-android'
+    id 'com.google.gms.google-services'
 }
 
 android {
@@ -75,8 +76,12 @@ dependencies {
     implementation 'androidx.room:room-runtime:2.4.2'
     implementation 'androidx.paging:paging-compose:1.0.0-alpha15'
     implementation 'androidx.preference:preference-ktx:1.2.0'
+    implementation platform('com.google.firebase:firebase-bom:30.1.0')
+    implementation 'com.google.firebase:firebase-analytics'
+    implementation 'com.google.firebase:firebase-messaging'
     implementation 'org.eclipse.paho:org.eclipse.paho.client.mqttv3:1.2.5'
-    implementation 'org.msgpack:msgpack-core:0.9.1'
+    implementation 'org.msgpack:msgpack-core:0.9.2'
+    implementation 'org.zeromq:jeromq:0.5.2'
 
     annotationProcessor 'androidx.room:room-compiler:2.4.2'
 
