--- a/app/build.gradle
+++ b/app/build.gradle
@@ -69,16 +69,16 @@ android {
 }
 
 dependencies {
-    implementation 'androidx.compose.material:material:1.2.1'
+    implementation 'androidx.compose.material:material:1.3.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
-    implementation 'androidx.navigation:navigation-compose:2.5.2'
+    implementation 'androidx.navigation:navigation-compose:2.5.3'
     implementation 'androidx.room:room-paging:2.4.3'
     implementation 'androidx.room:room-runtime:2.4.3'
-    implementation 'androidx.paging:paging-compose:1.0.0-alpha16'
+    implementation 'androidx.paging:paging-compose:1.0.0-alpha17'
     implementation 'androidx.preference:preference-ktx:1.2.0'
-    implementation platform('com.google.firebase:firebase-bom:30.5.0')
-    implementation 'com.google.firebase:firebase-analytics'
-    implementation 'com.google.firebase:firebase-messaging'
+    implementation platform('com.google.firebase:firebase-bom:31.0.2')
+    implementation 'com.google.firebase:firebase-analytics:21.2.0'
+    implementation 'com.google.firebase:firebase-messaging:23.1.0'
     implementation 'org.msgpack:msgpack-core:0.9.3'
     implementation 'org.zeromq:jeromq:0.5.2'
 
