--- a/app/build.gradle
+++ b/app/build.gradle
@@ -66,6 +66,11 @@ android {
     composeOptions {
         kotlinCompilerExtensionVersion '1.3.2'
     }
+    testOptions {
+        unitTests.all {
+            useJUnitPlatform()
+        }
+    }
 }
 
 dependencies {
@@ -83,6 +88,9 @@ dependencies {
     implementation 'org.zeromq:jeromq:0.5.3'
 
     annotationProcessor 'androidx.room:room-compiler:2.4.3'
+
+    testImplementation 'org.junit.jupiter:junit-jupiter:5.9.1'
+    testImplementation 'org.mockito:mockito-core:4.10.0'
 
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.0'
     androidTestImplementation 'androidx.test.ext:junit:1.1.4'
