--- a/gradle.properties
+++ b/gradle.properties
@@ -14,3 +14,6 @@
 android.useAndroidX=true
 android.enableJetifier=true
 org.gradle.unsafe.configuration-cache=true
+android.defaults.buildfeatures.buildconfig=true
+android.nonTransitiveRClass=false
+android.nonFinalResIds=false
