--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,21 +2,17 @@ plugins {
     id 'com.android.application'
     id 'kotlin-android'
     id 'com.google.gms.google-services'
+    id 'org.jetbrains.kotlin.plugin.compose'
 }
 
 android {
     namespace 'com.chess.genesis'
-    compileSdk 33
+    compileSdk = 36
 
-    applicationVariants.all { variant ->
-        variant.outputs.each { output ->
-            output.outputFileName = "GenesisChess-${output.baseName}-v${variant.versionName}.apk"
-        }
-    }
     defaultConfig {
         applicationId "com.chess.genesis"
-        minSdkVersion 27
-        targetSdkVersion 33
+        minSdkVersion 30
+        targetSdkVersion 36
         versionCode 72
         versionName "2.0.0-alpha2"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
@@ -50,49 +46,48 @@ android {
         release {
             minifyEnabled false
             signingConfig signingConfigs.release
-            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
     compileOptions {
-        sourceCompatibility = JavaVersion.VERSION_11
-        targetCompatibility = JavaVersion.VERSION_11
+        sourceCompatibility = JavaVersion.VERSION_21
+        targetCompatibility = JavaVersion.VERSION_21
     }
     buildFeatures {
         compose true
-    }
-    kotlinOptions {
-        jvmTarget = "11"
-    }
-    composeOptions {
-        kotlinCompilerExtensionVersion '1.3.2'
     }
     testOptions {
         unitTests.all {
             useJUnitPlatform()
         }
     }
+    packagingOptions {
+        doNotStrip "*/libandroidx.graphics.path.so"
+        doNotStrip "*/libdatastore_shared_counter.so"
+    }
 }
 
 dependencies {
-    implementation 'androidx.compose.material:material:1.3.1'
-    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
-    implementation 'androidx.navigation:navigation-compose:2.5.3'
-    implementation 'androidx.room:room-paging:2.5.1'
-    implementation 'androidx.room:room-runtime:2.5.1'
-    implementation 'androidx.paging:paging-compose:1.0.0-alpha17'
-    implementation 'androidx.preference:preference-ktx:1.2.0'
-    implementation platform('com.google.firebase:firebase-bom:32.1.0')
-    implementation 'com.google.firebase:firebase-analytics:21.3.0'
-    implementation 'com.google.firebase:firebase-messaging:23.1.2'
-    implementation 'org.msgpack:msgpack-core:0.9.3'
-    implementation 'org.zeromq:jeromq:0.5.3'
+    implementation 'androidx.compose.material:material:1.9.3'
+    implementation 'androidx.constraintlayout:constraintlayout:2.2.1'
+    implementation 'androidx.navigation:navigation-compose:2.9.5'
+    implementation 'androidx.room:room-paging:2.8.2'
+    implementation 'androidx.room:room-runtime:2.8.2'
+    implementation 'androidx.paging:paging-compose:3.3.6'
+    implementation 'androidx.preference:preference-ktx:1.2.1'
+    implementation platform('com.google.firebase:firebase-bom:34.4.0')
+    implementation 'com.google.firebase:firebase-analytics'
+    implementation 'com.google.firebase:firebase-messaging'
+    implementation 'org.msgpack:msgpack-core:0.9.10'
+    implementation 'org.zeromq:jeromq:0.6.0'
+    implementation 'androidx.compose.material:material-icons-extended:1.7.8'
 
-    annotationProcessor 'androidx.room:room-compiler:2.5.1'
+    annotationProcessor 'androidx.room:room-compiler:2.8.2'
 
-    testImplementation 'org.junit.jupiter:junit-jupiter:5.9.3'
-    testImplementation 'org.mockito:mockito-core:5.3.1'
+    testImplementation 'org.junit.jupiter:junit-jupiter:6.0.0'
+    testImplementation 'org.mockito:mockito-core:5.20.0'
 
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.5'
-    androidTestImplementation 'androidx.test:rules:1.5.0'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.7.0'
+    androidTestImplementation 'androidx.test.ext:junit:1.3.0'
+    androidTestImplementation 'androidx.test:rules:1.7.0'
 }
