--- a/gradle.properties
+++ b/gradle.properties
@@ -12,8 +12,7 @@
 # org.gradle.parallel=true
 #Sat Apr 30 12:50:39 PDT 2022
 android.useAndroidX=true
-android.enableJetifier=true
 org.gradle.unsafe.configuration-cache=true
-android.defaults.buildfeatures.buildconfig=true
 android.nonTransitiveRClass=false
 android.nonFinalResIds=false
+org.gradle.jvmargs=-Xmx1g -XX:MaxMetaspaceSize=512m
