--- a/app/build.gradle
+++ b/app/build.gradle
@@ -84,6 +84,7 @@ dependencies {
 
     annotationProcessor 'androidx.room:room-compiler:2.8.2'
 
+    testRuntimeOnly 'org.junit.platform:junit-platform-launcher:6.0.0'
     testImplementation 'org.junit.jupiter:junit-jupiter:6.0.0'
     testImplementation 'org.mockito:mockito-core:5.20.0'
 
