--- a/app/build.gradle
+++ b/app/build.gradle
@@ -62,20 +62,21 @@ android {
         }
     }
     packagingOptions {
-        doNotStrip "*/libandroidx.graphics.path.so"
-        doNotStrip "*/libdatastore_shared_counter.so"
+        jniLibs {
+            keepDebugSymbols += ['*/libandroidx.graphics.path.so', '*/libdatastore_shared_counter.so']
+        }
     }
 }
 
 dependencies {
     implementation 'androidx.compose.material3:material3:1.4.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.2.1'
-    implementation 'androidx.navigation:navigation-compose:2.9.5'
+    implementation 'androidx.navigation:navigation-compose:2.9.6'
     implementation 'androidx.room:room-paging:2.8.3'
     implementation 'androidx.room:room-runtime:2.8.3'
     implementation 'androidx.paging:paging-compose:3.3.6'
     implementation 'androidx.preference:preference-ktx:1.2.1'
-    implementation platform('com.google.firebase:firebase-bom:34.4.0')
+    implementation platform('com.google.firebase:firebase-bom:34.5.0')
     implementation 'com.google.firebase:firebase-analytics'
     implementation 'com.google.firebase:firebase-messaging'
     implementation 'org.msgpack:msgpack-core:0.9.10'
@@ -84,8 +85,8 @@ dependencies {
 
     annotationProcessor 'androidx.room:room-compiler:2.8.3'
 
-    testRuntimeOnly 'org.junit.platform:junit-platform-launcher:6.0.0'
-    testImplementation 'org.junit.jupiter:junit-jupiter:6.0.0'
+    testRuntimeOnly 'org.junit.platform:junit-platform-launcher:6.0.1'
+    testImplementation 'org.junit.jupiter:junit-jupiter:6.0.1'
     testImplementation 'org.mockito:mockito-core:5.20.0'
 
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.7.0'
